--- a/templates/libro/crear_autor.html
+++ b/templates/libro/crear_autor.html
@@ -16,20 +16,20 @@
           <div class="card-body card-block">
               <form action="#" method="post" enctype="multipart/form-data" class="form-horizontal">
                   <div class="row form-group">
-                      <div class="col col-md-3">{{autor_form.nombre.label}}</div>
-                      <div class="col-12 col-md-9">{{autor_form.nombre}}</div>
+                      <div class="col col-md-3">{{form.nombre.label}}</div>
+                      <div class="col-12 col-md-9">{{form.nombre}}</div>
                   </div>
                   <div class="row form-group">
-                      <div class="col col-md-3">{{autor_form.apellidos.label}}</div>
-                      <div class="col-12 col-md-9">{{autor_form.apellidos}}</div>
+                      <div class="col col-md-3">{{form.apellidos.label}}</div>
+                      <div class="col-12 col-md-9">{{form.apellidos}}</div>
                   </div>
                   <div class="row form-group">
-                      <div class="col col-md-3">{{autor_form.nacionalidad.label}}</div>
-                      <div class="col-12 col-md-9">{{autor_form.nacionalidad}}</div>
+                      <div class="col col-md-3">{{form.nacionalidad.label}}</div>
+                      <div class="col-12 col-md-9">{{form.nacionalidad}}</div>
                   </div>
                   <div class="row form-group">
-                      <div class="col col-md-3">{{autor_form.descripcion.label}}</div>
-                      <div class="col-12 col-md-9">{{autor_form.descripcion}}</div>
+                      <div class="col col-md-3">{{form.descripcion.label}}</div>
+                      <div class="col-12 col-md-9">{{form.descripcion}}</div>
                   </div>
                   <div class="text-center">
                       <button type="submit" class="btn btn-primary">Registrar</button>
