--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -32,6 +32,16 @@
                     <form method="POST">
                       {% csrf_token %}
                         <div class="form-group">
+                            {% if request.method == 'POST' %} 
+                                {% if form.error_messages %} 
+                                    <div class="alert alert-danger alert-dismissible" role="alert">
+                                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                            <span aria-hidden="true">&times;</span>
+                                        </button>
+                                        <strong>Advertencia: </strong>{{ form.get_invalid_login_error }}
+                                    </div>
+                                {% endif %}
+                                {% endif %}
                             <label>Nombre de usuario</label>
                             <input type="text" class="form-control" placeholder="Nombre de Usuario" name="username">
                         </div>
