--- a/templates/libro/listar_libro.html
+++ b/templates/libro/listar_libro.html
@@ -36,8 +36,8 @@
                         </td>
                         <td>{{ libro.fecha_publicacion }}</td>
                         <td>
-                          <a href="{% url 'libro:editar_libro' libro.id %}" class="btn btn-primary">Editar</a>
                           <a href="{% url 'libro:eliminar_libro' libro.id %}" class="btn btn-danger">Eliminar</a>
+                          <button onclick="abrir_modal_adicion('{% url 'libro:editar_libro' libro.id %}')" class="btn btn-primary">Editar</button>
                         </td>
                       </tr>
                     {% endfor %}
@@ -49,4 +49,22 @@
         <h1>No existen libros registrados</h1>
       {% endif %}
 
+      <div class="modal fade" id="edicion" role="dialog" >
+
+
+      </div>
+
+
 {% endblock body %}
+
+
+{% block extrajs%}
+<script type="text/javascript">
+var $ =jQuery.noConflict();
+function abrir_modal_adicion(url){
+  $('#edicion').load(url,function(){
+    $(this).modal('show');
+    });
+}
+</script>
+{% endblock extrajs%}
