--- a/templates/index.html
+++ b/templates/index.html
@@ -120,5 +120,8 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery-match-height@0.7.2/dist/jquery.matchHeight.min.js"></script>
     <script src="{% static 'js/main.js' %}"></script>
 
+    {% block extrajs%}
+    {% endblock extrajs%}
+
 </body>
 </html>
