--- a/templates/autor/eliminar_autor.html
+++ b/templates/autor/eliminar_autor.html
@@ -1,13 +1,17 @@
-{% extends 'index.html' %}
-{% block titulo %}
-  Eliminación de Autor
-{% endblock titulo %}
-{% block body %}
-<form method="POST">
-  {% csrf_token %}
-  <h2>¿Desea elminar el registro {{ autor.nombre }}?</h2>
-    <button type = "submit">Eliminar</button>
-    <a href="{% url 'libro:listar_autor' %}">Cancelar</a>
-</form>
+<div class="modal-dialog modal-lg" role="document" >
+  <div class="modal-content">
+      <div class="modal-header">
+        <button class="close" type="button" data-dismiss = "modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+          <h2 class="modal-title">Eliminar Autor:</h2>
+      </div>
+      <form id="form_edicion"  action="{% url 'libro:eliminar_autor' object.id %}" method="POST" enctype="multipart/form-data">
+        {% csrf_token %}
+        <h2>¿Desea elminar el registro {{ autor.titulo }}?</h2><br><br><br>
+        <button style="margin-bottom: 25px;" class="btn btn-primary" type="button" data-dismiss="modal">Cancelar</button>
+        <button style="margin-bottom: 25px;" class="btn btn-danger" type ="submit">Eliminar</button>
 
-{% endblock body %}
+      </form>        
+  </div>
+</div> 
