--- a/templates/autor/listar_autor.html
+++ b/templates/autor/listar_autor.html
@@ -32,8 +32,8 @@
                         <td>{{ autor.nacionalidad }}</td>
                         <td>{{ autor.descripcion }}</td>
                         <td>
-                          <a href="{% url 'libro:editar_autor' autor.id %}" class="btn btn-primary">Editar</a>
-                          <a href="{% url 'libro:eliminar_autor' autor.id %}" class="btn btn-danger">Eliminar</a>
+                          <button onclick="abrir_adicion_autor('{% url 'libro:editar_autor' autor.id %}')" class="btn btn-primary">Editar</button>
+                          <button onclick="abrir_eliminar_autor('{% url 'libro:eliminar_autor' autor.id %}')" class="btn btn-danger">Eliminar</button>
                         </td>
                       </tr>
                     {% endfor %}
@@ -45,4 +45,37 @@
         <h1>No existen autores registrados</h1>
       {% endif %}
 
+      <div class="modal fade" id="eliminacion" role="dialog" >
+
+
+      </div>
+
+      <div class="modal fade" id="edicion" role="dialog" >
+
+
+      </div>
+
+
+
 {% endblock body %}
+
+
+{% block extrajs%}
+<script type="text/javascript">
+var $ =jQuery.noConflict();
+function abrir_adicion_autor(url){
+  $('#edicion').load(url,function(){
+    $(this).modal('show');
+    });
+}
+</script>
+
+<script>
+  var $ =jQuery.noConflict();
+  function abrir_eliminar_autor(url){
+  $('#eliminacion').load(url,function(){
+    $(this).modal('show');
+    });
+}
+</script>
+{% endblock extrajs%}
