--- a/templates/index.html
+++ b/templates/index.html
@@ -28,6 +28,15 @@
                     <li class="active">
                         <a href="{% url 'index' %}"><i class="menu-icon fa fa-laptop"></i>Inicio</a>
                     </li>
+                    {% if request.user.is_staff %}
+                    <li class="menu-item-has-children dropdown">
+                        <a href="" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="menu-icon fa fa-users"></i>Usuarios</a>
+                        <ul class="sub-menu children dropdown-menu">
+                            <li><i class="fa fa-pencil"></i><a href="{% url 'login:crear_usuario' %}">Registro de Usuario</a></li>
+                            <li><i class="fa fa-table"></i><a href="{% url 'login:listar_usuario' %}">Listado de Usuario</a></li>
+                        </ul>
+                     </li>
+                    {% endif %}
                     <li class="menu-item-has-children dropdown">
                        <a href="" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="menu-icon fa fa-users"></i>Autores</a>
                        <ul class="sub-menu children dropdown-menu">
