--- a/templates/usuario/registrar_usuario.html
+++ b/templates/usuario/registrar_usuario.html
@@ -1,25 +1,29 @@
-  
-<div class="modal-dialog modal-lg" role="document">
-    <div class="modal-content">
-        <div class="modal-header">
-            <h2 class="modal-title">Creacion de Usuarios</h2>
-            <button class="close" type="button" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-            </button>
-        </div>
-        <form id="form_creacion" action="#" method="POST">
-            {% csrf_token %}
-            <div class="modal-body">
-                <div id="errores">
+{% extends 'index.html' %}
+{% block titulo %}
+  Biblioteca.dev | Registro de libros
+{% endblock titulo %}
 
-                </div>
-                {{ form.as_p }}
-            </div>
-            <div class="modal-footer">
-                <button class="btn btn-danger" type="button" onclick="cerrar_modal_creacion();">Cancelar</button>
-                <button id="boton_creacion" class="btn btn-primary" type="button" onclick="registrar();">Confirmar</button>
-            </div>
-        </form>
-    </div>
-</div>
-© 2021 GitHub, Inc.
+{% block body %}
+<form method="POST">
+  {% csrf_token %}
+  {% if error %}
+    <h2>{{ error }}</h2>
+  {% else %}
+      <div class="card">
+          <div class="card-header">
+              <strong>Formulario de Registro de Usuario</strong>
+          </div>
+          <div class="card-body card-block">
+              <form action="#" method="POST" enctype="multipart/form-data" class="form-horizontal">
+                  {{form.as_p}}
+                  <div class="text-center">
+                      <button type="submit" class="btn btn-primary">Registrar</button>
+                      <a href="{% url 'login:listar_usuario' %}" class="btn btn-danger">Cancelar</a>
+                  </div>
+              </form>
+          </div>
+      </div>
+  {% endif %}
+</form>
+
+{% endblock body %}
